test/libyul/yulSyntaxTests/pc.yul
{
    pop(pc())
}
// ====
// dialect: evmTyped
// ----
// SyntaxError 2450: (10-12): PC instruction is a low-level EVM feature. Because of that PC is disallowed in strict assembly.
